--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -1,28 +1,83 @@
 *{
 	margin: 0;
 	padding: 0;
+
 }
 .index-max{
 	width: 100%;
-	height: auto;
-	overflow: hidden;
-	display: -webkit-box;
-	-webkit-box-orient: horizontal;
-	
+	min-width: 900px;
+	height: 80px;
 }
 .index-ul{
 	list-style: none;
-	width: 100%;
+	width: 692px;
 	height: 80px;
-	-webkit-box-flex: 1;
+	float: right;
+	
 }
 .index-ul>li{
 	float: left;
+	margin: 0px 21px;
+	position: relative;
+}
+.index-ul>li>a{
+	text-decoration: none;
+	display: block;
+	text-align: center;
+	width: 58px;
+	height: 80px;
+	line-height: 80px;
+	font-size: 12px;
+	border-top: 2px solid #fff;
+	color: #777777;
+}
+.index-ul>li>img{
+	display: block;
+	width: 14px;
+	height: 14px;
+	margin-top: 35px;
+}
+.index-ul .index-input{
+	width:auto;
+	height: 80px;
+	cursor: pointer;
+	position: relative;
+	margin: 0px;
+	padding: 0px 21px;
+}
+
+.index-nn{
+	transition: .25s all;
+	position: absolute;
+	/*top: 100px;*/
+	opacity: 1;
+	/*right: -20px;*/
+	width: 210px;
+	height: 30px;
+	font-size: 14px;
+	background-color: #8ee426;
+	border: none;
+	padding: 0px 12px;
+	outline: medium;
+	color: #fff;
+
+	margin-top: 10px;
+}
+.index-ul>li>a:active{
+	text-decoration: none;
+	display: block;
+	text-align: center;
+	width: 58px;
+	height: 80px;
+	line-height: 80px;
+	font-size: 12px;
+	border-top: 2px solid #7bc91e;
+	color: #000;
 }
 .index-img{
 	width: 182px;
 	height: 80px;
-	overflow: hidden;
+	float: left;
 }
 .index-img img{
 	display: block;
@@ -30,6 +85,114 @@
 	height: 28px;
 	margin:26px auto 0 auto;
 }
+.ulf{
+	position: absolute;
+	top:100px;
+	left: -21px;
+	width: 100px;
+	height: 0px;
+	opacity: 0;
+	border-top:1px solid #7bc91e;
+	overflow: hidden;
+	background: #ffffff;
+	z-index: 3;
+	/*display: none;*/
+	transition: .5s;
+}
+.xulf{
+	position: absolute;
+	top:80px;
+	left: -21px;
+	width: 100px;
+	height: auto;
+	border-top:3px solid #7bc91e;
+	overflow: hidden;
+	background: #ffffff;
+	z-index: 3;
+	display: block;
+	transition: .5s;
+}
+.index-ul>li:nth-child(2)>ul>li{
+	list-style: none;
+	display: block;
+	width: 178px;
+	height: 57px;
+	border-bottom: 1px #eeeeee solid;
+	font-size: 12px;
+	line-height: 57px;
+	padding-left: 15px;
+	transition:  all 0.5s ease;
+}
+.index-ul>li:nth-child(2)>ul>li:hover{
+	padding-left: 20px;
+	transition:  all 0.5s ease;
+}
+.index-ul>li:nth-child(3)>ul>li:hover{
+	padding-left: 20px;
+	transition:  all 0.5s ease;
+}
+.index-ul>li:nth-child(2)>ul>li:last-child{
+	border-bottom: none;
+}
+.index-ul>li:nth-child(3)>ul>li:last-child{
+	border-bottom: none;
+}
+.index-ul>li:nth-child(2)>ul>li>a{
+	color: #76838f;
+	text-decoration: none;
+}
+.index-ul>li:nth-child(2)>ul>li>a:hover{
+	color: black;
+	text-decoration: none;
+}
+
+.index-ul>li:nth-child(3)>ul>li>a{
+	color: #76838f;
+	text-decoration: none;
+}
+.index-ul>li:nth-child(3)>ul>li>a:hover{
+	color: black;
+	text-decoration: none;
+}
+.ult{
+	position: absolute;
+	top:100px;
+	left: -21px;
+	width: 100px;
+	height: 0px;
+	border-top:3px solid #7bc91e;
+	overflow: hidden;
+	background: #ffffff;
+	z-index: 3;
+	opacity: 0;
+	transition: .5s;
+}
+.ulton{
+	position: absolute;
+	top:80px;
+	left: -21px;
+	width: 100px;
+	height:auto;
+	border-top:3px solid #7bc91e;
+	overflow: hidden;
+	background: #ffffff;
+	z-index: 3;
+	opacity: 1;
+	transition: .5s;
+}
+
+.index-ul>li:nth-child(3)>ul>li{
+	list-style: none;
+	display: block;
+	width: 178px;
+	height: 57px;
+	border-bottom: 1px #eeeeee solid;
+	font-size: 12px;
+	line-height: 57px;
+	padding-left: 15px;
+	transition:  all 0.5s ease;
+}
+
 .index-footer{
 	width: 100%;
 	height: 96px;
@@ -46,4 +209,38 @@
 }
 .index-footer p:nth-child(1){
 	margin-top: 29px;
+}
+.index-div{
+	width: 250px;
+	height: 50px;
+	position: absolute;
+	top:80px;
+	right:0px ;
+	background-color:#8ee426;
+	transition: .25s all;
+	opacity: 1;
+	z-index: 3;
+	overflow: hidden;
+}
+.index-hover{
+	transition: .25s all;
+	position: absolute;
+	top: 100px;
+	opacity: 0;
+	right: 0px;
+	width: 250px;
+	height: 0px;
+	font-size: 16px;
+	background-color: #8ee426;
+	padding: 0px 18px;
+	color: #fff;
+	z-index: 3;
+	overflow: hidden;
+}
+#index-div img{
+	width: 14px;
+	height: 14px;
+	position: absolute;
+	right: 15px;
+	top:18px;
 }
