--- a/app/views/news.html
+++ b/app/views/news.html
@@ -7,6 +7,7 @@
 	  <script src="scripts/controllers/news.js"></script>
 </head>
 <body>
+<div id="ssk">
 <div class="show">
     <img src="images/new2.jpg" id="img1">
 </div>
@@ -17,50 +18,61 @@
                 <img src="images/new1.jpg">
             </div>
             <div class="left_mes">
-              <p><a href="javascript:;">消费升级 定制家具保持30-50%高速增长</a></p>
+              <p id="p1"><a href="javascript:;">消费升级 定制家具保持30-50%高速增长</a></p>
               <span class="span1">消费作为宏观经济增长的驱动力之一，近年来对GDP的拉动已超过60%，与此同时，人均可支配收入水平也在不断提升，基于此，居民对消费品已不单单满足于填补空白需求，这不仅体现在食品饮料行业中，在家具与家电行业也显得尤为明显。家具和家电都是居住领域的重要组成部分，是居民居住消费最直接的体现。从过往的发展历史看，二者都已过了行业..</span>
               <span class="span2">2016-07-31&nbsp;&nbsp;  admin&nbsp;&nbsp;  <img src="images/new3.jpg">&nbsp;&nbsp;</span>
-              <span class="span3" style="float:left;">78</span>
+              <span class="span3" style="float:left;" id="span3">0</span>
             </div>
         </div>
-      <div class="left">
-        <div class="left_img">
-          <img src="images/new1.jpg">
+        <div class="left">
+            <div class="left_img">
+                <img src="images/new1.jpg">
+            </div>
+            <div class="left_mes">
+                <p><a href="javascript:;">消费升级 定制家具保持30-50%高速增长</a></p>
+                <span class="span1">消费作为宏观经济增长的驱动力之一，近年来对GDP的拉动已超过60%，与此同时，人均可支配收入水平也在不断提升，基于此，居民对消费品已不单单满足于填补空白需求，这不仅体现在食品饮料行业中，在家具与家电行业也显得尤为明显。家具和家电都是居住领域的重要组成部分，是居民居住消费最直接的体现。从过往的发展历史看，二者都已过了行业..</span>
+                <span class="span2">2016-07-31&nbsp;&nbsp;  admin&nbsp;&nbsp;  <img src="images/new3.jpg">&nbsp;&nbsp;</span>
+                <span class="span3" style="float:left;">78</span>
+            </div>
         </div>
-        <div class="left_mes">
-          <p><a href="javascript:;">消费升级 定制家具保持30-50%高速增长</a></p>
-          <span class="span1">消费作为宏观经济增长的驱动力之一，近年来对GDP的拉动已超过60%，与此同时，人均可支配收入水平也在不断提升，基于此，居民对消费品已不单单满足于填补空白需求，这不仅体现在食品饮料行业中，在家具与家电行业也显得尤为明显。家具和家电都是居住领域的重要组成部分，是居民居住消费最直接的体现。从过往的发展历史看，二者都已过了行业..</span>
-          <span class="span2">2016-07-31&nbsp;&nbsp;  admin&nbsp;&nbsp;  <img src="images/new3.jpg">&nbsp;&nbsp;</span>
-          <span class="span3" style="float:left;">78</span>
+        <div class="left">
+            <div class="left_img">
+                <img src="images/new1.jpg">
+            </div>
+            <div class="left_mes">
+                <p><a href="javascript:;">消费升级 定制家具保持30-50%高速增长</a></p>
+                <span class="span1">消费作为宏观经济增长的驱动力之一，近年来对GDP的拉动已超过60%，与此同时，人均可支配收入水平也在不断提升，基于此，居民对消费品已不单单满足于填补空白需求，这不仅体现在食品饮料行业中，在家具与家电行业也显得尤为明显。家具和家电都是居住领域的重要组成部分，是居民居住消费最直接的体现。从过往的发展历史看，二者都已过了行业..</span>
+                <span class="span2">2016-07-31&nbsp;&nbsp;  admin&nbsp;&nbsp;  <img src="images/new3.jpg">&nbsp;&nbsp;</span>
+                <span class="span3" style="float:left;">78</span>
+            </div>
         </div>
-      </div>
-      <div class="left">
-        <div class="left_img">
-          <img src="images/new1.jpg">
+        <div class="left">
+            <div class="left_img">
+                <img src="images/new1.jpg">
+            </div>
+            <div class="left_mes">
+                <p><a href="javascript:;">消费升级 定制家具保持30-50%高速增长</a></p>
+                <span class="span1">消费作为宏观经济增长的驱动力之一，近年来对GDP的拉动已超过60%，与此同时，人均可支配收入水平也在不断提升，基于此，居民对消费品已不单单满足于填补空白需求，这不仅体现在食品饮料行业中，在家具与家电行业也显得尤为明显。家具和家电都是居住领域的重要组成部分，是居民居住消费最直接的体现。从过往的发展历史看，二者都已过了行业..</span>
+                <span class="span2">2016-07-31&nbsp;&nbsp;  admin&nbsp;&nbsp;  <img src="images/new3.jpg">&nbsp;&nbsp;</span>
+                <span class="span3" style="float:left;">78</span>
+            </div>
         </div>
-        <div class="left_mes">
-          <p><a href="javascript:;">消费升级 定制家具保持30-50%高速增长</a></p>
-          <span class="span1">消费作为宏观经济增长的驱动力之一，近年来对GDP的拉动已超过60%，与此同时，人均可支配收入水平也在不断提升，基于此，居民对消费品已不单单满足于填补空白需求，这不仅体现在食品饮料行业中，在家具与家电行业也显得尤为明显。家具和家电都是居住领域的重要组成部分，是居民居住消费最直接的体现。从过往的发展历史看，二者都已过了行业..</span>
-          <span class="span2">2016-07-31&nbsp;&nbsp;  admin&nbsp;&nbsp;  <img src="images/new3.jpg">&nbsp;&nbsp;</span>
-          <span class="span3" style="float:left;">78</span>
+        <div class="left">
+            <div class="left_img">
+                <img src="images/new1.jpg">
+            </div>
+            <div class="left_mes">
+                <p><a href="javascript:;">消费升级 定制家具保持30-50%高速增长</a></p>
+                <span class="span1">消费作为宏观经济增长的驱动力之一，近年来对GDP的拉动已超过60%，与此同时，人均可支配收入水平也在不断提升，基于此，居民对消费品已不单单满足于填补空白需求，这不仅体现在食品饮料行业中，在家具与家电行业也显得尤为明显。家具和家电都是居住领域的重要组成部分，是居民居住消费最直接的体现。从过往的发展历史看，二者都已过了行业..</span>
+                <span class="span2">2016-07-31&nbsp;&nbsp;  admin&nbsp;&nbsp;  <img src="images/new3.jpg">&nbsp;&nbsp;</span>
+                <span class="span3" style="float:left;" >78</span>
+            </div>
         </div>
-      </div>
-      <div class="left">
-        <div class="left_img">
-          <img src="images/new1.jpg">
-        </div>
-        <div class="left_mes">
-          <p><a href="javascript:;">消费升级 定制家具保持30-50%高速增长</a></p>
-          <span class="span1">消费作为宏观经济增长的驱动力之一，近年来对GDP的拉动已超过60%，与此同时，人均可支配收入水平也在不断提升，基于此，居民对消费品已不单单满足于填补空白需求，这不仅体现在食品饮料行业中，在家具与家电行业也显得尤为明显。家具和家电都是居住领域的重要组成部分，是居民居住消费最直接的体现。从过往的发展历史看，二者都已过了行业..</span>
-          <span class="span2">2016-07-31&nbsp;&nbsp;  admin&nbsp;&nbsp;  <img src="images/new3.jpg">&nbsp;&nbsp;</span>
-          <span class="span3" style="float:left;">78</span>
-        </div>
-      </div>
     </div>
     <div class="main_r">
         <div class="search">
-          <div class="seh">
-            <input type="text" placeholder="Search">
+          <div class="seh" id="seh">
+            <input type="text" placeholder="Search" id="ser">
             <img src="images/new4.jpg">
           </div>
         </div>
