--- a/app/views/family.html
+++ b/app/views/family.html
@@ -1,1 +1,94 @@
-<div class="abc">family</div>
+<!--背景-->
+<div id="hui_bj"></div>
+
+
+
+<!--选项卡-->
+<div id="hui_nav">
+	<div class="hui_nav">
+		<ul>
+			<li><a ui-sref="product">全部</a></li>
+			<li><a ui-sref="family" style="color: #7BC91E;">家庭影院</a></li>
+			<li><a ui-sref="fever">HiFi发烧</a></li>
+			<li><a ui-sref="screen">3D屏幕</a></li>
+			<li><a ui-sref="meeting">多功能会议</a></li>
+		</ul>
+		<div class="hui_iph">
+			<input type="search" name="" id="" placeholder="search" />
+			<a href="javascript:;"><img src="../images/shousuo.png"/></a>
+		</div>
+	</div>
+</div>
+
+
+<!--内容-->
+
+<div id="hui_main">
+	<div class="hui_main">
+		<ul>
+			<!--<li>
+				<div>
+					<a href="javascript:;">
+						<img src="../images/BeoPlay A9 无线音箱.jpg" title="BeoPlay A9 无线音箱"/>
+					</a>
+					<h4><a href="javascript:;">BeoPlay A9 无线音箱</a></h4>
+				</div>
+			</li>
+			<li>
+				<div>
+					<a href="javascript:;">
+					<img src="../images/Beosound 旋转控.jpg" title="Beosound 旋转控"/>
+					</a>
+					<h4><a href="javascript:;">Beosound 旋转控</a></h4>
+				</div>
+			</li>
+			<li>
+				<div>
+					<a href="javascript:;">
+						<img src="../images/3D 立体环音.jpg" title="3D 立体环音"/>
+					</a>
+						<h4><a href="javascript:;">3D 立体环音</a></h4>
+				</div>
+			</li>
+			<li>
+				<div>
+				<a href="javascript:;">
+					<img src="../images/Spring 提跨箱.jpg" title="Spring 提跨箱"/>
+				</a>
+				
+				<h4><a href="javascript:;">Spring 提跨箱</a></h4>
+				</div>
+			</li>
+			<li>
+				<div>
+					<a href="javascript:;">
+						<img src="../images/Beolit I15 全向声.jpg" title="Beolit I15 全向声"/>
+					</a>
+				<h4><a href="javascript:;">Beolit I15 全向声</a></h4>
+				</div>
+			</li>
+			<li>
+				<div>
+					<a href="javascript:;">
+				<img src="../images/Bass A1 低音式.jpg" title="Bass A1 低音式"/>
+					</a>
+				<h4><a href="javascript:;">Bass A1 低音式</a></h4>
+				</div>
+			</li>
+			<li>
+				<div>
+					<a href="javascript:;">
+				<img src="../images/Amazing 黑盒子.jpg" title="Amazing 黑盒子"/></a>
+				<h4><a href="javascript:;">Amazing 黑盒子</a></h4>
+				</div>
+			</li>-->
+			<li>
+				<div>
+					<a href="javascript:;">
+				<img src="../images/BeoPlay 双喇叭.jpg" title="BeoPlay 双喇叭"/></a>
+				<h4><a href="javascript:;">BeoPlay 双喇叭</a></h4>
+				</div>
+			</li>
+		</ul>
+	</div>
+</div>
