--- a/app/views/product.html
+++ b/app/views/product.html
@@ -7,11 +7,11 @@
 <div id="hui_nav">
 	<div class="hui_nav">
 		<ul>
-			<li><a href="javascript:;">全部</a></li>
-			<li><a href="javascript:;">家庭影院</a></li>
-			<li><a href="javascript:;">HiFi发烧</a></li>
-			<li><a href="javascript:;">3D屏幕</a></li>
-			<li><a href="javascript:;">多功能会议</a></li>
+			<li><a ui-sref="product" style="color: #7BC91E;">全部</a></li>
+			<li><a ui-sref="family">家庭影院</a></li>
+			<li><a ui-sref="fever">HiFi发烧</a></li>
+			<li><a ui-sref="screen">3D屏幕</a></li>
+			<li><a ui-sref="meeting">多功能会议</a></li>
 		</ul>
 		<div class="hui_iph">
 			<input type="search" name="" id="" placeholder="search" />
