--- a/app/styles/family.css
+++ b/app/styles/family.css
@@ -1,3 +1,114 @@
-.abc{
-	color: red;
+body{
+	width: 100%;
+	overflow-x: hidden;
+	background: #F6F6F6;
+}
+#hui_bj{
+	background: url(../images/logo.jpg) no-repeat center center;
+	background-size:100% 100%;
+	background-size: cover;
+	width: 100%;
+	height: 450px;
+}
+
+
+/*导航*/
+#hui_nav{
+	width: 100%;
+	height: 50px;
+	background: white;
+}
+.hui_nav{
+	width: 1170px;
+	height: 50px;
+	margin: 0 auto;
+	/*background: red;*/
+}
+.hui_nav ul{
+	height:40px;
+	float: left;
+	width: 400px;
+}
+.hui_nav ul li{
+	display: inline-block;
+	line-height: 50px;
+	
+}
+.hui_nav ul li a{
+	display: block;
+	padding: 0 10px;
+	text-decoration: none;
+	color: #90939B;
+}
+.hui_nav ul li a:hover{
+	color: #7BC91E;
+}
+.hui_nav .hui_iph{
+	float: right;
+	width: 200px;
+	height: 36px;
+	margin-top: 7px;
+	margin-right: 10px;
+	border: 1px solid #90939B;
+	border-radius: 18px;
+}
+.hui_nav input{
+	width: 170px;
+	border:none;
+	outline:none;
+	border-radius: 18px;
+	height: auto;
+	padding: 7px 0;
+	color: #90939B;
+	text-indent: 20px;
+}
+.hui_nav img{
+	width: 14px;
+	height: 14px;
+}
+
+
+/*内容*/
+#hui_main{
+	width: 100%;
+	height: auto;
+}
+.hui_main{
+	width: 1170px;
+	margin: 0 auto;
+}
+.hui_main ul{
+	width: 1200px;
+	margin: 0 auto;
+}
+.hui_main ul li{
+	float: left;
+	margin: 10px;
+	background:white;
+	display: inline-block;
+}
+.hui_main ul li div{
+	width: 270px;
+	height: 265px;
+}
+.hui_main ul li div:hover h4 a{
+	transition: all ease 0.5s;
+	margin-left: 14px;
+}
+.hui_main ul li div img{
+	width: 270px;
+	height: 225px;
+}
+.hui_main ul li h4{
+	text-align: center;
+}
+.hui_main ul li h4 a{
+	color:#000;
+	font-size: 16px;
+	text-decoration: none;
+	transition: all ease 0.5s;
+}
+.hui_main ul li h4 a:hover{
+	color: #7BC91E;
+	
 }
