--- a/app/views/meeting.html
+++ b/app/views/meeting.html
@@ -1,1 +1,40 @@
-<div>meeting</div>
+<!--背景-->
+<div id="hui_bj"></div>
+
+
+
+<!--选项卡-->
+<div id="hui_nav">
+	<div class="hui_nav">
+		<ul>
+			<li><a ui-sref="product">全部</a></li>
+			<li><a ui-sref="family">家庭影院</a></li>
+			<li><a ui-sref="fever">HiFi发烧</a></li>
+			<li><a ui-sref="screen">3D屏幕</a></li>
+			<li><a ui-sref="meeting" style="color: #7BC91E;">多功能会议</a></li>
+		</ul>
+		<div class="hui_iph">
+			<input type="search" name="" id="" placeholder="search" />
+			<a href="javascript:;"><img src="../images/shousuo.png"/></a>
+		</div>
+	</div>
+</div>
+
+
+<!--内容-->
+
+<div id="hui_main">
+	<div class="hui_main">
+		<ul>
+			
+			<li>
+				<div>
+					<a href="javascript:;">
+				<img src="../images/Amazing 黑盒子.jpg" title="Amazing 黑盒子"/></a>
+				<h4><a href="javascript:;">Amazing 黑盒子</a></h4>
+				</div>
+			</li>
+			
+		</ul>
+	</div>
+</div>
