--- a/app/views/case.html
+++ b/app/views/case.html
@@ -1,1 +1,15 @@
-<div>case</div>
+<div>
+   <div class="case">
+   	   <div class="case-zhou">
+   	   	    <div class="zhou-first">
+   	   	    	
+   	   	    </div>
+   	   	    <div class="zhou-first">
+   	   	    	
+   	   	    </div>
+   	   	    <div class="zhou-first">
+   	   	    	
+   	   	    </div>
+   	   </div>
+   </div>
+</div>
