--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,1 +1,19 @@
-<div>contact</div>
+<div class="contact_img" ng-controller="contact">
+	<img src="../images/contact_img.jpg" id="con_banner"/>
+</div>
+<div class="contact_content">
+	<h3 class="contact_content_p1">联系·科技网</h3>
+	<div class="contact_content_div">
+		<div class="contact_content_div_img">
+			<img src="../images/contact_img2.jpg"/>
+		</div>
+		<div class="contact_content_div2">
+			<p>未来科技技术有限公司</p>
+			<li><img src="../images/contact_address.jpg"/>地址:广东揭阳人民政府左侧酒店五楼M1156间</li>
+			<li><img src="../images/contact_phone.jpg"/>手机: 13751695404/12345678901</li>
+			<li><img src="../images/contact_email.jpg"/>邮箱:wirreyouremain@domain.com</li>
+			<li><img src="../images/contact_tel.jpg"/>电话:+86-0663-8654321</li>
+			<li><img src="../images/contact_last.jpg"/>邮编:522000</li>
+		</div>
+	</div>
+</div>
