--- a/app/views/dynamic.html
+++ b/app/views/dynamic.html
@@ -1,1 +1,127 @@
-<div>dynamic</div>
+<!DOCTYPE html>
+<html>
+<head lang="en">
+  <meta charset="UTF-8">
+  <title></title>
+  <script src="scripts/controllers/dynamic.js"></script>
+</head>
+<body>
+<div class="dynamic">
+
+  <div class="show">
+    <img src="images/new2.jpg" id="img1">
+  </div>
+  <div class="main">
+    <div class="main_l">
+      <div class="left">
+        <div class="left_img">
+          <img src="images/new1.jpg">
+        </div>
+        <div class="left_mes">
+          <p id="p1"><a href="javascript:;">消费升级 定制家具保持30-50%高速增长</a></p>
+          <span class="span1">消费作为宏观经济增长的驱动力之一，近年来对GDP的拉动已超过60%，与此同时，人均可支配收入水平也在不断提升，基于此，居民对消费品已不单单满足于填补空白需求，这不仅体现在食品饮料行业中，在家具与家电行业也显得尤为明显。家具和家电都是居住领域的重要组成部分，是居民居住消费最直接的体现。从过往的发展历史看，二者都已过了行业..</span>
+          <span class="span2">2016-07-31&nbsp;&nbsp;  admin&nbsp;&nbsp;  <img src="images/new3.jpg">&nbsp;&nbsp;</span>
+          <span class="span3" style="float:left;" id="span3">0</span>
+        </div>
+      </div>
+      <div class="left">
+        <div class="left_img">
+          <img src="images/new1.jpg">
+        </div>
+        <div class="left_mes">
+          <p><a href="javascript:;">消费升级 定制家具保持30-50%高速增长</a></p>
+          <span class="span1">消费作为宏观经济增长的驱动力之一，近年来对GDP的拉动已超过60%，与此同时，人均可支配收入水平也在不断提升，基于此，居民对消费品已不单单满足于填补空白需求，这不仅体现在食品饮料行业中，在家具与家电行业也显得尤为明显。家具和家电都是居住领域的重要组成部分，是居民居住消费最直接的体现。从过往的发展历史看，二者都已过了行业..</span>
+          <span class="span2">2016-07-31&nbsp;&nbsp;  admin&nbsp;&nbsp;  <img src="images/new3.jpg">&nbsp;&nbsp;</span>
+          <span class="span3" style="float:left;">78</span>
+        </div>
+      </div>
+      <div class="left">
+        <div class="left_img">
+          <img src="images/new1.jpg">
+        </div>
+        <div class="left_mes">
+          <p><a href="javascript:;">消费升级 定制家具保持30-50%高速增长</a></p>
+          <span class="span1">消费作为宏观经济增长的驱动力之一，近年来对GDP的拉动已超过60%，与此同时，人均可支配收入水平也在不断提升，基于此，居民对消费品已不单单满足于填补空白需求，这不仅体现在食品饮料行业中，在家具与家电行业也显得尤为明显。家具和家电都是居住领域的重要组成部分，是居民居住消费最直接的体现。从过往的发展历史看，二者都已过了行业..</span>
+          <span class="span2">2016-07-31&nbsp;&nbsp;  admin&nbsp;&nbsp;  <img src="images/new3.jpg">&nbsp;&nbsp;</span>
+          <span class="span3" style="float:left;">78</span>
+        </div>
+      </div>
+      <div class="left">
+        <div class="left_img">
+          <img src="images/new1.jpg">
+        </div>
+        <div class="left_mes">
+          <p><a href="javascript:;">消费升级 定制家具保持30-50%高速增长</a></p>
+          <span class="span1">消费作为宏观经济增长的驱动力之一，近年来对GDP的拉动已超过60%，与此同时，人均可支配收入水平也在不断提升，基于此，居民对消费品已不单单满足于填补空白需求，这不仅体现在食品饮料行业中，在家具与家电行业也显得尤为明显。家具和家电都是居住领域的重要组成部分，是居民居住消费最直接的体现。从过往的发展历史看，二者都已过了行业..</span>
+          <span class="span2">2016-07-31&nbsp;&nbsp;  admin&nbsp;&nbsp;  <img src="images/new3.jpg">&nbsp;&nbsp;</span>
+          <span class="span3" style="float:left;">78</span>
+        </div>
+      </div>
+      <div class="left">
+        <div class="left_img">
+          <img src="images/new1.jpg">
+        </div>
+        <div class="left_mes">
+          <p><a href="javascript:;">消费升级 定制家具保持30-50%高速增长</a></p>
+          <span class="span1">消费作为宏观经济增长的驱动力之一，近年来对GDP的拉动已超过60%，与此同时，人均可支配收入水平也在不断提升，基于此，居民对消费品已不单单满足于填补空白需求，这不仅体现在食品饮料行业中，在家具与家电行业也显得尤为明显。家具和家电都是居住领域的重要组成部分，是居民居住消费最直接的体现。从过往的发展历史看，二者都已过了行业..</span>
+          <span class="span2">2016-07-31&nbsp;&nbsp;  admin&nbsp;&nbsp;  <img src="images/new3.jpg">&nbsp;&nbsp;</span>
+          <span class="span3" style="float:left;" >78</span>
+        </div>
+      </div>
+    </div>
+    <div class="main_r">
+      <div class="search">
+        <div class="seh" id="seh">
+          <input type="text" placeholder="Search" id="ser">
+          <img src="images/new4.jpg">
+        </div>
+      </div>
+      <div class="center">
+        <p>为您推荐</p>
+        <ul>
+          <li><a href="javascript:;">消费升级 定制家具保持30-50%高速增长</a></li>
+          <li><a href="javascript:;">面对定制风暴 来看这些家具人怎么说？</a></li>
+          <li><a href="javascript:;">欧式家具未来十大新趋势，怎么时尚怎么来</a></li>
+          <li><a href="javascript:;">东莞家具出走湖北？家具业尝试高端规划集聚</a></li>
+          <li><a href="javascript:;">古典家具两大制胜法宝：改良与创新</a></li>
+        </ul>
+      </div>
+      <div class="bot">
+        <p><a href="javascript:;">所有文章</a></p>
+        <p><a href="javascript:;">公司动态</a></p>
+        <p><a href="javascript:;">行业资讯</a></p>
+      </div>
+    </div>
+    </body>
+    </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</div>
