--- a/app/views/case.html
+++ b/app/views/case.html
@@ -1,15 +1,59 @@
-<div>
-   <div class="case">
-   	   <div class="case-zhou">
-   	   	    <div class="zhou-first">
-   	   	    	
-   	   	    </div>
-   	   	    <div class="zhou-first">
-   	   	    	
-   	   	    </div>
-   	   	    <div class="zhou-first">
-   	   	    	
-   	   	    </div>
-   	   </div>
-   </div>
+<div ng-controller="case">
+	<div class="case">
+		<div class="case-zhou">
+			<div class="zhou-first">
+				<span class="case-span"></span>
+				<img src="../images/Case-1.jpg" class="case-img" />
+				<p>2016-08-01</p>
+				<p></p>
+				<p>A9 无线音箱 排布案例</p>
+				<p class="case-p">浏览</p>
+			</div>
+			<div class="zhou-first">
+				<span class="case-span"></span>
+				<img src="../images/Case-2.jpg" class="case-img" />
+				<p>2016-08-01</p>
+				<p></p>
+				<p>BeoSound 旋转控 排布案例</p>
+				<p class="case-p">浏览</p>
+			</div>
+			<div class="zhou-first">
+				<span class="case-span"></span>
+				<img src="../images/Case-3.jpg" class="case-img" />
+				<p>2016-08-01</p>
+				<p></p>
+				<p>TV视频屏幕 排布案例</p>
+				<p class="case-p">浏览</p>
+			</div>
+		</div>
+		<div class="case-zhou">
+			<div class="zhou-first">
+				<span class="case-span"></span>
+				<img src="../images/Case-4.jpg" class="case-img" />
+				<p>2016-08-01</p>
+				<p></p>
+				<p>Bass A1 低音式 排布案例</p>
+				<p class="case-p">浏览</p>
+			</div>
+			<div class="zhou-first">
+				<span class="case-span"></span>
+				<img src="../images/Case-5.jpg" class="case-img" />
+				<p>2016-08-01</p>
+				<p></p>
+				<p>BeoPlay 双喇叭</p>
+				<p class="case-p">浏览</p>
+			</div>
+			<div class="zhou-first">
+				<span class="case-span"></span>
+				<img src="../images/Case-6.jpg" class="case-img" />
+				<p>2016-08-01</p>
+				<p></p>
+				<p>A9 无线音箱 排布案例</p>
+				<p class="case-p">浏览</p>
+			</div>
+		</div>
+	</div>
+	<div class="case-last">
+		<p><a href="javascript:;" class="case-a">加载更多</a></p>
+	</div>
 </div>
