--- a/app/styles/fever.css
+++ b/app/styles/fever.css
@@ -17,6 +17,7 @@ body{
 	width: 100%;
 	height: 50px;
 	background: white;
+	margin-bottom: 15px;
 }
 .hui_nav{
 	width: 1170px;
@@ -72,6 +73,7 @@ body{
 #hui_main{
 	width: 100%;
 	height: auto;
+	margin-bottom: 30px;
 }
 .hui_main{
 	width: 1170px;
@@ -83,13 +85,14 @@ body{
 }
 .hui_main ul li{
 	float: left;
-	margin: 10px;
+	margin:15px;
 	background:white;
 	display: inline-block;
 }
 .hui_main ul li div{
 	width: 270px;
 	height: 265px;
+	margin-bottom: 30px;
 }
 .hui_main ul li div:hover h4 a{
 	transition: all ease 0.5s;
