万雅琪第三个

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,5 +1,5 @@
-<div class="about-img">
-  <img src="images/about-banner.jpg" alt=""/>
+<div class="about-img" ng-controller="about">
+  <img src="images/about-banner.jpg" alt="" id="about-img"/>
 </div>
 <div class="about-h">
   <div class="about-hone">
