--- a/app/styles/about.css
+++ b/app/styles/about.css
@@ -1,6 +1,8 @@
 *{margin: 0px;padding: 0px;font-family: "微软雅黑";}
-.about-img{width: 100%;height: 400px;}
-.about-img img{width: 100%}
+.about-img{width: 100%;overflow: hidden;}
+.about-img img{width: 100%;
+    height:100%;
+    transition: 2s;}
 .about-h{width: 1110px;height: auto;margin: 0 auto;background-color: #fff;}
 .about-hone{width: 100%;margin-top: 70px;}
 .about-h h1{font-size: 21px;text-align: center;color:#37474f;}
