--- a/app/styles/fever.css
+++ b/app/styles/fever.css
@@ -1,7 +1,6 @@
-body{
+/*body{
 	width: 100%;
 	overflow-x: hidden;
-	/*background: #F6F6F6;*/
 }
 #hui_bj{
 	background: url(../images/logo.jpg) no-repeat center center;
@@ -9,11 +8,11 @@ body{
 	background-size: cover;
 	width: 100%;
 	height: 450px;
-}
+}*/
 
 
 /*导航*/
-#hui_nav{
+/*#hui_nav{
 	width: 100%;
 	height: 50px;
 	background: white;
@@ -23,7 +22,6 @@ body{
 	width: 1170px;
 	height: 50px;
 	margin: 0 auto;
-	/*background: red;*/
 }
 .hui_nav ul{
 	height:40px;
@@ -66,11 +64,11 @@ body{
 .hui_nav img{
 	width: 14px;
 	height: 14px;
-}
+}*/
 
 
 /*内容*/
-#hui_main{
+/*#hui_main{
 	width: 100%;
 	height: auto;
 	background: #F6F6F6;
@@ -116,4 +114,4 @@ body{
 .hui_main ul li h4 a:hover{
 	color: #7BC91E;
 	
-}
+}*/
