万雅琪  第几个

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,22 +1,24 @@
-<div class="about-img" ng-controller="about">
-  <img src="images/about-banner.jpg" alt="" id="about-img"/>
-</div>
-<div class="about-h">
-  <div class="about-hone">
-    <h1>关于科技 & 声音</h1>
-    <h2>　</h2>
-    <h2>拥有最无敌的创意、最精美的视觉、最具国际化的意识和前瞻性思维！</h2>
-    <h2>自1991年公司创立至今，历经三十余载，始终坚持从事高档精品科技设计，成就经典品牌。</h2>
-    <h2>科技网有限公司坐落于“中国制造重镇” —— 广东省揭阳市。</h2>
+<div ng-controller="about">
+  <div class="about-img">
+    <img src="images/about-banner.jpg" alt="" id="about-img"/>
   </div>
-  <img style="border-bottom: 1px solid #eee" src="images/about-shuju.jpg" alt=""/>
-  <div class="about-hone">
-    <h1>系统SCI 无线音箱</h1>
-    <h2>　</h2>
-    <h2>系统是由多个物质组成，每一个物质都有一个或多个属性，每个属性都有状态的值，有的是变量，</h2>
-    <h2>有的属性分为多个子属性，每个子属性也有状态的值，通俗的说，属性值就是物质的状态；规则就是各种属性怎样相互作用，</h2>
-    <h2>分为同种属性的相互作用和不同属性的相互作用，规则发生的过程就是事件，用原因与结果、</h2>
-    <h2>前提条件、触发条件、目的来描述规则，规则规定了物质（系统）的变化方式。</h2>
+  <div class="about-h">
+    <div class="about-hone">
+      <h1>关于科技 & 声音</h1>
+      <h2>　</h2>
+      <h2>拥有最无敌的创意、最精美的视觉、最具国际化的意识和前瞻性思维！</h2>
+      <h2>自1991年公司创立至今，历经三十余载，始终坚持从事高档精品科技设计，成就经典品牌。</h2>
+      <h2>科技网有限公司坐落于“中国制造重镇” —— 广东省揭阳市。</h2>
+    </div>
+    <img style="border-bottom: 1px solid #eee" src="images/about-shuju.jpg" alt=""/>
+    <div class="about-hone">
+      <h1>系统SCI 无线音箱</h1>
+      <h2>　</h2>
+      <h2>系统是由多个物质组成，每一个物质都有一个或多个属性，每个属性都有状态的值，有的是变量，</h2>
+      <h2>有的属性分为多个子属性，每个子属性也有状态的值，通俗的说，属性值就是物质的状态；规则就是各种属性怎样相互作用，</h2>
+      <h2>分为同种属性的相互作用和不同属性的相互作用，规则发生的过程就是事件，用原因与结果、</h2>
+      <h2>前提条件、触发条件、目的来描述规则，规则规定了物质（系统）的变化方式。</h2>
+    </div>
+    <img style="margin-bottom: 76px;margin-top: 65px;" src="images/about-one.jpg" alt=""/>
   </div>
-  <img style="margin-bottom: 76px;margin-top: 65px;" src="images/about-one.jpg" alt=""/>
 </div>
